<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ultimate Fitness</string>
    <string name="exercise">Exercise</string>
    <string name="plans">Plans</string>
    <string name="tips">Tips</string>
    <string name="utility">Utility</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leg_amp_thigh_exercise"><![CDATA[Leg & Thigh Exercise]]></string>
    <string name="leg_amp_thigh_workout"><![CDATA[LEG & THIGH WORKOUT]]></string>
    <string name="ready_to_go_bench_press">READY TO GO —Bench Press</string>
    <string name="finish_next_exercise">Finish next exercise!</string>
    <string name="resume">RESUME</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="pause">Pause</string>
    <string name="change_photo">Change photo</string>
    <string name="edit_name">Edit Name</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="abs_exercise">Abs Exercise</string>
    <string name="abs_workout">Follow these exercises</string>
    <string name="_30_minutes">30 MINUTES</string>
    <string name="cross_jumping_jack">CROSS JUMPING JACK</string>
    <string name="high_stepping">HIGH STEPPING</string>
    <string name="standing_bicycle_crunches">STANDING BICYCLE CRUNCHES</string>
    <string name="mountain_climber">MOUNTAIN CLIMBER</string>
    <string name="x_10">X 10</string>
    <string name="x_30">30 Second</string>
    <string name="flutter_kicks">FLUTTER KICKS</string>
    <string name="standing_bicycle_crunch">STANDING BICYCLE CRUNCH</string>
    <string name="russian_twist">RUSSIAN TWIST</string>
    <string name="leg_arise">LEG ARISE</string>
    <string name="butt_bridge">BUTT BRIDGE</string>
    <string name="plank">PLANK</string>
    <string name="cobra_stretch">COBRA STRETCH</string>
    <string name="lying_twist_stretch_left">LYING TWIST STRETCH LEFT</string>

</resources>