<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/exercise"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/exercise"
        android:title="@string/exercise"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/plan"
        android:icon="@drawable/plan_icon"
        android:title="@string/plans"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/tips"
        android:icon="@drawable/tipmenu"
        android:title="@string/tips"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/utility"
        android:icon="@drawable/utility_icon"
        android:title="@string/utility"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/login"
        android:icon="@drawable/loginmenu"
        android:title="@string/login"
        android:enabled="true"
        android:visible="true"
        app:showAsAction="ifRoom"/>
</menu>