<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.ultimatefitness.male.exercises.chestMaleAllExercise.benchPressFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/change_fragment">
        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:src="@drawable/bench_press"
            android:id="@+id/MaleGif"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/ready_to_go_bench_press"
            android:textColor="#4863A0"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/MaleStartPoint"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/MaleEndpoint"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/finish_next_exercise"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/back"
                android:id="@+id/MaleBackBtn"
                android:layout_marginStart="100dp"
                android:layout_marginTop="30dp"/>

            <ticker.views.com.ticker.widgets.circular.timer.view.CircularView
                android:id="@+id/Malecircular_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                app:m_arc_stroke_color="@android:color/white"
                app:m_cicle_stroke_width="14"
                app:m_circle_radius="35"
                app:m_circle_stroke_color="#4863A0" />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/forwordarrow"
                android:id="@+id/MaleForwordBtn"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginStart="90dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/resume"
                android:id="@+id/MaleresumeBtn" />
            <ImageView
                android:layout_marginStart="50dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/start"
                android:id="@+id/MalestartBtn" />


            <ImageView
                android:layout_marginStart="50dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/pause"
                android:id="@+id/MalepauseBtn"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_marginStart="90dp"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/resume"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/start_exercise"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/pause"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="FULL_BANNER"
            app:adUnitId=" ca-app-pub-2342822035961981/5574761661">
            <!--           ca-app-pub-2342822035961981/5574761661-->
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</FrameLayout>